--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jest-expo": "^35.0.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
-    "react-native-webview": "7.0.5",
+    "react-native-webview": "^10.7.0",
     "react-test-renderer": "16.8.3",
     "tslint": "5.12.0",
     "tslint-config-prettier": "1.17.0",
